# lmbatch

./: .gitignore  CLAUDE.md  config.yaml  main.py  pyproject.toml
final_test/: summarize.2. 3055 SPlan.txt  summarize.4. 3118_Session 3_ER clip.txt  summarize.document1.txt  summarize.document2.txt
promptfiles/: prompt1.txt  summarize.txt
src/: __init__.py  client.py  config.py  file_manager.py  processor.py
txtfiles/: 2. 3055 SPlan.txt  4. 3118_Session 3_ER clip.txt
